// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Github should handle GITHUB_GET_REPOS_FAILURE 1`] = `
Object {
  "repos": Object {
    "data": Object {},
    "message": "Something went wrong",
    "query": "",
    "status": "error",
  },
}
`;

exports[`Github should handle GITHUB_GET_REPOS 1`] = `
Object {
  "repos": Object {
    "data": Object {
      "undefined": Array [],
    },
    "message": "",
    "query": undefined,
    "status": "running",
  },
}
`;

exports[`Github should handle GITHUB_GET_REPOS_SUCCESS 1`] = `
Object {
  "repos": Object {
    "data": Object {
      "": Array [],
    },
    "message": "",
    "query": "",
    "status": "loaded",
  },
}
`;

exports[`Github should return the initial state 1`] = `
Object {
  "repos": Object {
    "data": Object {},
    "message": "",
    "query": "",
    "status": "idle",
  },
}
`;
